--- a/daily_dictation/src/main/resources/application.properties
+++ b/daily_dictation/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 server.port=8080
 server.servlet.session.timeout=30m
+jwt.signerKey=S3cr3tK3yThatIsVeryLongAndComplex123!
+jwt.valid-duration=3600
+jwt.refreshable-duration=36000
+
